new demo to check github

--- a/index.html
+++ b/index.html
@@ -3,16 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>imfrozky's github page :)</title>
+  <title>imfrozky's github page</title>
+  <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
-  <h1>imfrozky's github page :)</h1>
-  <p>Welcome to my GitHub page! Here you can find my projects and contributions.</p>
-  <p>Feel free to explore and reach out if you have any questions!</p>
-  <footer>
-    <p>&copy; 2025 imfrozky</p>
-  </footer> 
-  
+<h1> Welcome to imfrozky's first page!</h1>
+<p>Here I will be displaying everything I do on coding.</p>
   
 </body>
 </html>
