demo on github index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <h1> Welcome to imfrozky's first page!</h1>
 <p>Here I will be displaying everything I do on coding.</p>
+  <p>This is a demo on githob code editor.</p>
   
 </body>
 </html>
