--- a/index.html
+++ b/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>imfrozky's github page</title>
-  <link rel="stylesheet" href="./style/style.css">
-</head>
-<body>
-<h1> Welcome to imfrozky's first page!</h1>
-<p>Here I will be displaying everything I do on coding.</p>
-  <p>This is a demo on githob code editor.</p>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Erkan's Portfolio</title>
+    <link rel="stylesheet" href="./style/style.css" />
+  </head>
+  <body>
+    <header>
+      <h1>Erkan's Portfolio</h1>
+      <p>Welcome to my personal portfolio page!</p>
+    </header>
+    <main>
+      <section id="about">
+        <h2>About Me</h2>
+        <p>
+          Hi, I'm Erkan! I'm passionate about learning to code and building
+          amazing projects.
+        </p>
+      </section>
+      <section id="projects">
+        <h2>Projects</h2>
+        <div class="project">
+          <h3>Project 1</h3>
+          <p>A brief description of my first project.</p>
+        </div>
+        <div class="project">
+          <h3>Project 2</h3>
+          <p>A brief description of my second project.</p>
+        </div>
+      </section>
+      <section id="contact">
+        <h2>Contact</h2>
+        <p>
+          Feel free to reach out to me at
+          <a href="instagram.com/erkanzzkan">IG@ erkanzzkan</a>.
+        </p>
+      </section>
+    </main>
+    <footer>
+      <p>&copy; 2025 Erkan. All rights reserved.</p>
+    </footer>
+    <script src="./app/mainapp.js"></script>
+  </body>
 </html>
